# rusty-book-manager

./: Cargo.toml  Makefile.toml  memo.md
.cargo/: config.toml
adapter/: Cargo.toml
adapter/migrations/: 20241004114001_start.down.sql  20241004114001_start.up.sql
adapter/src/database/: mod.rs
adapter/src/database/model/: auth.rs  book.rs  checkout.rs  user.rs
adapter/src/redis/: mod.rs
adapter/src/repository/: auth.rs  book.rs  checkout.rs  user.rs
api/: Cargo.toml
api/src/: extractor.rs  lib.rs  openapi.rs
api/src/handler/: auth.rs  book.rs  checkout.rs  user.rs
api/src/model/: book.rs  user.rs
api/src/route/: book.rs  user.rs  v1.rs
api/tests/api/: book.rs  helper.rs
data/: initial_setup.sql
kernel/: Cargo.toml
kernel/src/model/: id.rs
kernel/src/model/auth/: event.rs
kernel/src/model/book/: mod.rs
kernel/src/model/user/: mod.rs
kernel/src/repository/: auth.rs  checkout.rs  health.rs
registry/: Cargo.toml
registry/src/: lib.rs
shared/: Cargo.toml
shared/src/: env.rs  error.rs
